# aoc-template

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml
solutions/python/{{year}}/day_{{day}}/: main.py
solutions/rust/lib/: Cargo.toml
solutions/rust/lib/src/: lib.rs
solutions/rust/lib/src/errors/: mod.rs
solutions/rust/{{year}}/day_{{day}}/: Cargo.toml
solutions/rust/{{year}}/day_{{day}}/benches/: bench.rs
solutions/rust/{{year}}/day_{{day}}/src/: lib.rs  main.rs
