[workspace]

members = [
    "solutions/rust/lib",
    "solutions/rust/{{year}}/*",
]

[workspace.package]
authors = [""]
license = "mit"
edition = "2021"

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3

[workspace.dependencies]
test-case = "2.2.2"
