[package]
name = "aoc_{{year}}_{{day}}"
version = "1.0.0"
authors.workspace = true
license = "mit"
edition = "2021"

[lib]
name = "aoc_{{year}}_{{day}}"
path = "./src/lib.rs"

[dependencies]
aoclib = { path = "../../lib" }

[dev-dependencies]
criterion = "*"
test-case.workspace = true

[[bench]]
name = "bench"
harness = false
